

Version vNext

	New features:
		-[Core] RegisterManyForOpenGeneric overloads that take in an BatchRegistrationCallback and a list of
		 types now accept open generic types. Closed generic versions of the supplied open generic types will
		 be added to the list of implementations that is supplied to the BatchRegistrationCallback.
		(work item 19745).

	Bug fixes:
		-[Core] Adding KnownRelationships during ExpressionBuilt would leak to other InstanceProducers when
		 they shared the same Registration. (work item 19796).
		-[Core] The RegisterDecorator method overload that accepts the predicate didn't supply the correct
		 DecoratorPredicateContext when decorating multiple registrations with the same service type. The
		 internal cached used the service type as key, not the InstanceProducer itself. (work item 19780).
		-[Core] The container did not check for possible cyclic dependencies while resolving collections,
		 which could cause a stackoverflow exception. (work item 19849).
		-[Core] The uses friendly (C# like) type names in exception messages, but this failed when displaying
		 a type that was a an array of generic types (example: Tuple<int>[]). In that case a FormatException
		 was thrown (work item 19847).


Version 2.2.3 (v2.2.3 RTM)  2013-05-05
	Small performance improvement and bug fix concerning the use of ResolveUnregisteredType and
	RegisterOpenGeneric.

	Changes:
		-[Core] ResolveUnregisteredType event was triggered more often than needed, which had a negative
		 impact on performance.

	Bug fixes:
		-[Core] Use of ResolveUnregisteredType event (that is primarily consumed by the RegisterOpenGeneric
		 extension methods) could lead to incorrect 'Single Responsibility Violation' warnings in the
		 Debugger Diagnostic view. (work item 19670)


Version 2.2.1 (v2.2.1 RTM)  2013-04-19
	This patch release fixes a few small bugs and and performance improvements. The performance of